[package]
name = "canvas-api"
version = "0.1.0"
authors = ["OverHash"]
edition = "2021"
description = "An implementation of the Instructure Canvas API"
repository = "https://github.com/OverHash/canvas-api"
license = "MIT OR Apache-2.0"
keywords = ["Canvas", "Instructure", "API"]

[dependencies]
async-trait = "0.1.64"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
